src/objects/BrokerSetting__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Protected</customSettingsVisibility>
    <description>Controls which broker implementation to use and whether it should run at all.</description>
    <fields>
        <fullName>BrokerClassName__c</fullName>
        <description>Fully qualified name of Broker subclass (eg esb_fb.FutureBroker)</description>
        <label>Broker Class Name</label>
        <length>97</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EventStamp__c</fullName>
        <description>A time stamp representing the last time that a heartbeat message was successfully enqueued to the broker</description>
        <label>Event Stamp</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inhibit__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Set this TRUE to interrupt a haywire Broker during development.</description>
        <label>Inhibit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsPaused__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, this setting prevents new Messages from being processed. They will still enter the queue, but unresolved in a &apos;Queued&apos; status.</description>
        <label>IsPaused</label>
        <type>Checkbox</type>
    </fields>
    <label>Broker Settings</label>
</CustomObject>